# Base-Setup

./: App.vcxproj  CMakeLists.txt  Makefile  MyApp.sln  MyClass.cc  MyClass.h  MyLib.vcxproj  MyTests.qbs  MyTextTests.cc  README.md  Tests.vcxproj
App/: App.pro  MyTextTests.cc
UnitTests/: MyUnitTests.cc  UnitTests.pro
